# giver

./: AUTHORS  COPYING  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  giver.csproj  giver.mdp  giver.mds  giver.sln
data/: Makefile.am  giver.desktop.in
data/glade/: Makefile.am  giver-prefs.glade
data/images/: Makefile.am
data/sounds/: Makefile.am
po/: LINGUAS  POTFILES.in  fi.po
src/: Application.cs  ComplexMenuItem.cs  Defines.Win32.cs  Defines.cs.in  GiverMenuItem.cs  GiverService.cs  GnomeApplication.cs  GnomePlatformService.cs  GtkApplication.cs  IDesktopApplication.cs  Logger.cs  Makefile.am  PayloadInfo.cs  PhotoService.cs  PlatformService.cs  Preferences.cs  PreferencesDialog.cs  Protocol.cs  ReceivingHandler.cs  RequestHandler.cs  SendingHandler.cs  ServiceInfo.cs  ServiceLocator.cs  Services.cs  TargetService.cs  TargetWindow.cs  TransferStatusArgs.cs  TrayLib.cs  TrayPopupWindow.cs  UriList.cs  Utilities.cs  WindowsPlatformService.cs  giver.in
src/common/: mdns_helper.c  mdns_helper.h
src/osx/: CopyTargetWindowController.h  CopyTargetWindowController.m  Giver.icns  GiverAppDelegate.h  GiverAppDelegate.m  GiverNetService.h  GiverNetService.m  GiverWindowController.h  GiverWindowController.m  Giver_Prefix.pch  Info.plist  main.m
src/osx/English.lproj/: InfoPlist.strings
src/osx/English.lproj/CopyTargetWindow.nib/: classes.nib  info.nib  keyedobjects.nib
src/osx/English.lproj/GiverWindow.nib/: classes.nib  info.nib  keyedobjects.nib
src/osx/English.lproj/MainMenu.nib/: classes.nib  info.nib  keyedobjects.nib
src/osx/Giver.xcodeproj/: calvin.mode1  calvin.pbxuser  project.pbxproj
